--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-
+title : Sonaal Rawat
+# logo /assests/img/headshot_circle.png
+# description : text below image
+# show_downlaoad : False
+theme : jekyll-theme-minimal
